--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -87,7 +87,9 @@
           <ul class="logs-list">
             <li class="log-item" data-type="app" *ngFor="let notification of Notifications">
               <i class="la la-circle log-icon text-success"></i>
-              <div><a [href]="notification.url">{{notification.title}}</a><small class="float-right text-muted">{{notification.date_create}}</small></div>
+              <div><a [href]="notification.url" [innerHTML]="notification.title"></a>
+                <small class="float-right text-muted">{{notification.date_create|date:"medium"}}</small>
+              </div>
             </li>
             <li *ngIf="Notifications.length <= 0">Aucune notification</li>
           </ul>
