--- a/src/app/dashboard/candidat/candidat-list/candidat-list.component.css
+++ b/src/app/dashboard/candidat/candidat-list/candidat-list.component.css
@@ -2,3 +2,8 @@ div.dataTables_wrapper div.dataTables_processing {
   background-color: #17a2b8;
   color: #ffffff;
 }
+
+.update-status,
+.edit-candidate {
+  cursor: pointer;
+}
