--- a/src/app/dashboard/company/company-lists/company-lists.component.css
+++ b/src/app/dashboard/company/company-lists/company-lists.component.css
@@ -1,3 +1,10 @@
-.update-account, .edit-status, .edit-company {
-    cursor: pointer;
+div.dataTables_wrapper div.dataTables_processing {
+  background-color: #17a2b8;
+  color: #ffffff;
+}
+
+.update-account,
+.edit-status,
+.edit-company {
+  cursor: pointer;
 }
