--- a/src/app/dashboard/candidat/candidat-list/candidat-list.component.html
+++ b/src/app/dashboard/candidat/candidat-list/candidat-list.component.html
@@ -1,45 +1,40 @@
 <div class="page-content fade-in-up">
+  <app-status-changer  (refresh)="reloadDatatable()" [posttype]="posttype"></app-status-changer>
   <div class="ibox">
     <div class="ibox-body">
-
       <h5 class="font-strong mb-4">LES CANDIDATS</h5>
       <div class="mb-4">
-        
         <form class="form-success mb-4">
-
-            <div class="row mb-4">
-              <div class="col-md-4 mb-2 mb-sm-0">
-                <select class="selectpicker form-control " id="type-status" title="Tous les status" data-style="btn-solid">
-                  <option value="">Tous les status</option>
-                  <option value="pending">En attente</option>
-                  <option value="1">Publier</option>
-                  <option value="0">Désactiver</option>
-                </select>
-              </div>
-              <div class="col-md-4 form-group mb-2 mb-sm-0">
-                  <div class="input-group-icon input-group-icon-left mr-3">
-                    <span class="input-icon input-icon-right font-16"><i class="fa fa-calendar"></i></span>
-                    <input class="form-control" id="daterange" autocomplete="off" type="text" value="">
-                  </div>
-                </div>
-              <app-activity-area class="col-md-4 mb-2 mb-sm-0" (choosed)="onChoosed($event)"></app-activity-area>
-    
+          <div class="row mb-4">
+            <div class="col-md-4 mb-2 mb-sm-0">
+              <select class="selectpicker form-control " id="type-status" title="Tous les status" data-style="btn-solid">
+                <option value="">Tous les status</option>
+                <option value="pending">En attente</option>
+                <option value="1">Publier</option>
+                <option value="0">Désactiver</option>
+              </select>
             </div>
-    
-            <div class="row">
-              <div class="col-md-4 form-check mb-2 mb-sm-0">
-                <div class="input-group-icon input-group-icon-left mr-3">
-                  <span class="input-icon input-icon-right font-16"><i class="ti-search"></i></span>
-                  <input class="form-control form-control-solid" id="key-search" type="text" placeholder="Rechercher ...">
-                </div>
-              </div>
-              <div class="col-md-4">
-                <button type="button" (click)="resetFilterSearch()" class="btn btn-sm btn-info">Reinitialiser les filtres</button>
+            <div class="col-md-4 form-group mb-2 mb-sm-0">
+              <div class="input-group-icon input-group-icon-left mr-3">
+                <span class="input-icon input-icon-right font-16"><i class="fa fa-calendar"></i></span>
+                <input class="form-control" id="daterange" autocomplete="off" type="text" value="">
               </div>
             </div>
-    
-          </form>
+            <app-activity-area class="col-md-4 mb-2 mb-sm-0" (choosed)="onChoosed($event)"></app-activity-area>
+          </div>
 
+          <div class="row">
+            <div class="col-md-4 form-check mb-2 mb-sm-0">
+              <div class="input-group-icon input-group-icon-left mr-3">
+                <span class="input-icon input-icon-right font-16"><i class="ti-search"></i></span>
+                <input class="form-control form-control-solid" id="key-search" type="text" placeholder="Rechercher ...">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <button type="button" (click)="resetFilterSearch()" class="btn btn-sm btn-info">Reinitialiser les filtres</button>
+            </div>
+          </div>
+        </form>
 
         <div class="table-responsive row">
           <table class="table table-bordered table-hover" id="orders-table">
@@ -47,6 +42,8 @@
               <tr>
                 <th>#</th>
                 <th>L'emploi recherché</th>
+                <th>Nom</th>
+                <th>Prénom</th>
                 <th>Status</th>
                 <th>Réference</th>
                 <th>Secteur d'activité</th>
