--- a/src/app/dashboard/offers/offer-lists/offer-lists.component.html
+++ b/src/app/dashboard/offers/offer-lists/offer-lists.component.html
@@ -15,7 +15,7 @@
           <div class="col-md-4">
             <select class="selectpicker form-control " id="type-rateplan" title="Tous les types" data-style="btn-solid">
               <option value="">Tous les types</option>
-              <option value="sereine">Premium</option>
+              <option value="sereine">Sereine</option>
               <option value="standard">Standard</option>
             </select>
           </div>
