--- a/src/app/directives/account/status-changer/status-changer.component.html
+++ b/src/app/directives/account/status-changer/status-changer.component.html
@@ -21,7 +21,7 @@
                     <option value="0">Désactiver</option>
                     <option value="pending">En attente</option>
                   </select>
-                  <span class="help-block mt-2">This is some placeholder block-level help text for the above input.</span>
+                  <!-- <span class="help-block mt-2">This is some placeholder block-level help text for the above input.</span> -->
                 </div>
               </div>
   
