--- a/src/app/directives/candidat/archived-candidate/archived-candidate.component.html
+++ b/src/app/directives/candidat/archived-candidate/archived-candidate.component.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header p-4">
-          <h5 class="modal-title">Les candidats archivés</h5>
+          <h5 class="modal-title">Les CV incomplets</h5>
           <button class="close" type="button" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">×</span>
           </button>
@@ -11,8 +11,8 @@
             <div class="flexbox px-4 py-3 bg-primary-50">
                 <div class="flexbox-b">
                   <div id="inbox-actions">
-                    <button class="btn btn-sm btn-transparent btn-primary btn-icon-only btn-circle" 
-                    data-action="archived" [disabled]="!selected" (click)="reject()" data-toggle="tooltip" data-original-title="Achever">
+                    <button class="btn btn-sm btn-transparent btn-primary btn-icon-only" 
+                    data-action="archived" [disabled]="!selected" (click)="reject()" data-toggle="tooltip" data-original-title="Marquer comme complète">
                       <i class="la la-check-circle-o"></i>
                     </button>
                 </div>
